src/parser/snapshots/rex__parser__tests__snapshot_primes-3.snap
---
source: src/parser/mod.rs
expression: "parse(\"a'''\")"
---
Ok(
    [
        Scripts(
            Scripts {
                base: Some(
                    Symbol(
                        Symbol {
                            codepoint: '𝑎',
                            atom_type: Alpha,
                        },
                    ),
                ),
                superscript: Some(
                    [
                        Symbol(
                            Symbol {
                                codepoint: '‴',
                                atom_type: Ordinary,
                            },
                        ),
                    ],
                ),
                subscript: None,
            },
        ),
    ],
)
