src/parser/snapshots/rex__parser__tests__snapshot_primes-5.snap
---
source: src/parser/mod.rs
expression: "parse(\"'a\")"
---
Ok(
    [
        Symbol(
            Symbol {
                codepoint: '′',
                atom_type: Ordinary,
            },
        ),
        Symbol(
            Symbol {
                codepoint: '𝑎',
                atom_type: Alpha,
            },
        ),
    ],
)
