src/parser/snapshots/rex__parser__tests__snapshot_primes-6.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\sqrt'\")"
---
Ok(
    [
        Radical(
            Radical {
                inner: [
                    Symbol(
                        Symbol {
                            codepoint: '′',
                            atom_type: Ordinary,
                        },
                    ),
                ],
                character: '√',
            },
        ),
    ],
)
