src/parser/snapshots/rex__parser__tests__snapshot_primes-7.snap
---
source: src/parser/mod.rs
expression: "parse(\"f'_2\")"
---
Ok(
    [
        Scripts(
            Scripts {
                base: Some(
                    Symbol(
                        Symbol {
                            codepoint: '𝑓',
                            atom_type: Alpha,
                        },
                    ),
                ),
                superscript: Some(
                    [
                        Symbol(
                            Symbol {
                                codepoint: '′',
                                atom_type: Ordinary,
                            },
                        ),
                    ],
                ),
                subscript: Some(
                    [
                        Symbol(
                            Symbol {
                                codepoint: '2',
                                atom_type: Alpha,
                            },
                        ),
                    ],
                ),
            },
        ),
    ],
)
