src/parser/snapshots/rex__parser__tests__snapshot_radicals-10.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\sqrt_2\")"
---
Err(
    MissingArgForCommand(
        "sqrt",
    ),
)
