src/parser/snapshots/rex__parser__tests__snapshot_radicals-11.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\sqrt^2\")"
---
Err(
    MissingArgForCommand(
        "sqrt",
    ),
)
