src/parser/snapshots/rex__parser__tests__snapshot_radicals-2.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\sqrt2\")"
---
Ok(
    [
        Radical(
            Radical {
                inner: [
                    Symbol(
                        Symbol {
                            codepoint: '2',
                            atom_type: Alpha,
                        },
                    ),
                ],
                character: '√',
            },
        ),
    ],
)
