src/parser/snapshots/rex__parser__tests__snapshot_radicals-3.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\sqrt\\alpha\")"
---
Ok(
    [
        Radical(
            Radical {
                inner: [
                    Symbol(
                        Symbol {
                            codepoint: '𝛼',
                            atom_type: Alpha,
                        },
                    ),
                ],
            },
        ),
    ],
)
