src/parser/snapshots/rex__parser__tests__snapshot_radicals-4.snap
---
source: src/parser/mod.rs
expression: "parse(r\"1^\\sqrt2\")"
---
Ok(
    [
        Scripts(
            Scripts {
                base: Some(
                    Symbol(
                        Symbol {
                            codepoint: '1',
                            atom_type: Alpha,
                        },
                    ),
                ),
                superscript: Some(
                    [
                        Radical(
                            Radical {
                                inner: [
                                    Symbol(
                                        Symbol {
                                            codepoint: '2',
                                            atom_type: Alpha,
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                ),
                subscript: None,
            },
        ),
    ],
)
